--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  align-self: bottom;
+  align-self: flex-end;
   width: 100%;
   margin-bottom: 0;
   position: relative;
