--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -10,6 +10,7 @@ html {
 
 * {
   box-sizing: border-box;
+  outline: none;
 }
 
 .container {
